# docker-images-admin

./: README.md  meson.build
data/: docker-images-admin.desktop.in  mate-user-admin.desktop.in  meson.build
data/hicolor/: meson.build
data/icon/: meson.build
po/: POTFILES.in  docker-images-admin.pot  zh_CN.po
src/: docker-images-json.c  docker-images-json.h  docker-images-list.c  docker-images-list.h  docker-images-local.c  docker-images-local.h  docker-images-remote.c  docker-images-remote.h  docker-images-share.c  docker-images-share.h  docker-images-utils.c  docker-images-utils.h  hello  main.c  meson.build
